--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nbt_style.css">
+    <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
     <link rel="stylesheet" href="font/Roboto_Flex/">
     <script src="js/jquery-1.11.2.min.js"></script>
@@ -216,12 +217,163 @@
 
     <div class="album">
         <div class="album-wrapper">
-            <article class="album-item">
+            <article class="album-item mobile">
                 <a href="#" target="_blank">
-                    <img src="img/TimeFateKarmaGod.jpg" alt="album-img">
+                    <img src="img/DeadClubCity-cover01.jpeg" alt="album-img">
                 </a>
 
-                
+                <h4>DEAD CLUB CITY (DELUXE)</h4>
+                <p>19TH JULY 2024</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item mobile">
+                <a href="#" target="_blank">
+                    <img src="img/OhNoHeSaidWhat-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>OH NO :: HE SAID WHAT?</h4>
+                <p>29TH JANUARY 2024</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item mobile">
+                <a href="#" target="_blank">
+                    <img src="img/SomethingOnMyMind-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>SOMETHING ON MY MIND - PURPLE DISCO MACHINE, DUKE DUMONT &amp; NOTHING BUT THIEVES</h4>
+                <p>8TH SEPTEMBER 2023</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item tablet">
+                <a href="#" target="_blank">
+                    <img src="img/DeadClubCity-cover02.jpg" alt="album-img">
+                </a>
+
+                <h4>DEAD CLUB CITY</h4>
+                <p>30TH JUNE 2023</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item tablet">
+                <a href="#" target="_blank">
+                    <img src="img/Overcome-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>OVERCOME</h4>
+                <p>10TH MAY 2023</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item tablet">
+                <a href="#" target="_blank">
+                    <img src="img/WelcometotheDCC-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>WELCOME TO THE DCC</h4>
+                <p>15TH MARCH 2023</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/MoralPanicTheCompleteEdition-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>MORAL PANIC THE COMPLETE EDITION</h4>
+                <p>29TH OCTOBER 2021</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/MoralPanic2-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>MORAL PANIC ||</h4>
+                <p>23RD JULY 2021</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/MoralPanic-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>MORAL PANIC</h4>
+                <p>23RD OCTOBER 2020</p>
+
+                <ul>
+                    <li>Unperson</li>
+                    <li>Is Everybody Going Crazy?</li>
+                    <li>Moral Panic</li>
+                    <li>Real Love Song</li>
+                    <li>Phobia</li>
+                    <li>This Feels Like The End</li>
+                    <li>Free If We Want It</li>
+                    <li>Impossible</li>
+                    <li>There Was Sun</li>
+                    <li>Can You Afford To Be An Individual?</li>
+                    <li>Before We Drift Away</li>
+                </ul>
+
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/WDYTWYMMTW-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>WHAT DID YOU THINK WHEN YOU MADE ME THIS WAY?</h4>
+                <p>19TH OCTOBER 2018</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/BrokenMachine-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>BROKEN MACHINE</h4>
+                <p>8TH SEPTEMBER 2017</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
+            </article>
+
+            <article class="album-item pc">
+                <a href="#" target="_blank">
+                    <img src="img/NBT-cover.jpg" alt="album-img">
+                </a>
+
+                <h4>NOTHING BUT THIEVES</h4>
+                <p>16TH OCTOBER 2015</p>
+                <a href="#" target="_blank">
+                    LISTEN NOW
+                </a>
             </article>
         </div>
     </div>
